@@ -5,6 +5,7 @@
 * Store and apply backend (scanner-specific) and gscan2pdf settings separately.
 * Those frontend settings stored in profiles need not be stored in general
   settings.
+* When paper in use, hide other geometry widgets
 
 
 1.5.0 (11.06.2016):
